--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -1,7 +1,7 @@
 .calculator {
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 0 0 0 20px;
 }
 
 .calculator .input-container {
